--- a/src/app/components/layout/_variables.scss
+++ b/src/app/components/layout/_variables.scss
@@ -27,6 +27,10 @@ $navbar-cart-dropdown-width: 320px;
 $navbar-mobile-menu-width: 320px;
 $navbar-mobile-menu-width-max: 85vw;
 
+// Variables del carrito para navbar
+$cart-badge-bg: #ef4444;
+$cart-badge-text: #ffffff;
+
 // Estados y efectos
 $navbar-hover-bg: rgba(255, 255, 255, 0.1);
 $navbar-active-bg: rgba(255, 255, 255, 0.15);
