--- a/src/app/shared/aside-card/aside-card.scss
+++ b/src/app/shared/aside-card/aside-card.scss
@@ -1,5 +1,5 @@
 @use '../_variables.scss' as v;
-@use '../../styles/_mixins.scss' as m;
+@use '../_mixins.scss' as m;
 
 :host {
   --bg-white: v.$color-bg-white;
