--- a/src/app/shared/product-card/product-card.scss
+++ b/src/app/shared/product-card/product-card.scss
@@ -1,5 +1,5 @@
 @use '../_variables.scss' as v;
-@use '../../styles/_mixins.scss' as m;
+@use '../_mixins.scss' as m;
 @use '../_media-queries.scss' as mq;
 
 :host {
